Added the remaining files

--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>POOL</title>    
+    <title>POOL - Unblock</title>
 </head>
-<body>
-    <script src="script.js"></script>
-<body>
 </html>
